force-app/main/default/objects/Trigger_Bypass__mdt/Trigger_Bypass__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for bypassing Trigger Handlers.</description>
    <label>Trigger Bypass</label>
    <pluralLabel>Trigger Bypasses</pluralLabel>
</CustomObject>