force-app/main/default/objects/Trigger_Bypass__mdt/fields/Bypass_All__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, bypasses the handler for everyone.</description>
    <label>Bypass All</label>
    <type>Checkbox</type>
</CustomField>