force-app/main/default/objects/Trigger_Bypass__mdt/fields/Bypass_For_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Bypass_For_Profiles__c</fullName>
    <description>Comma-separated list of Profile Names to bypass.</description>
    <label>Bypass For Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>