force-app/main/default/objects/Trigger_Bypass__mdt/fields/Bypass_For_Users__c.field-meta.xml
<CustomField>
    <fullName>Bypass_For_Users__c</fullName>
    <description>Comma-separated list of UserIds or Usernames to bypass.</description>
    <label>Bypass For Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>