force-app/main/default/objects/Trigger_Bypass__mdt/fields/Bypass_Permission__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Permission__c</fullName>
    <description>API Name of a Custom Permission. If the user has this permission, the handler is bypassed.</description>
    <label>Bypass Permission</label>
    <length>100</length>
    <type>Text</type>
</CustomField>