force-app/main/default/objects/Trigger_Bypass__mdt/fields/Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Handler_Name__c</fullName>
    <description>Name of the Handler Class to bypass (e.g., AccountTriggerHandler).</description>
    <label>Handler Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>