force-app/main/default/objects/Trigger_Bypass__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, this bypass rule is ignored.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>