force-app/main/default/objects/Trigger_Bypass__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API Name of the Object this bypass applies to.</description>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>